# Maze-Generator-Gazebo

./: CMakeLists.txt  README.md  convertor.py  dynamics_model.h5  imitation_learning_dataset.csv  maze.world  maze_generator.py  maze_solver.py  package.xml  perception.ipynb  policy_model.h5  q_model2.h5  value_model.h5
launch/: maze_world.launch  spawn_turtlebot3.launch
maze worlds/: maze_12.world  maze_13.world  maze_15.world  maze_17.world  maze_18.world  maze_19.world  maze_2.world  maze_21.world  maze_24.world  maze_25.world  maze_26.world  maze_27.world  maze_28.world  maze_29.world  maze_3.world  maze_31.world  maze_39.world  maze_43.world  maze_44.world  maze_45.world  maze_46.world  maze_47.world  maze_48.world  maze_6.world  maze_7.world  maze_9.world
mazes/: maze_1.txt  maze_10.txt  maze_11.txt  maze_12.txt  maze_13.txt  maze_14.txt  maze_15.txt  maze_16.txt  maze_17.txt  maze_18.txt  maze_19.txt  maze_2.txt  maze_20.txt  maze_21.txt  maze_22.txt  maze_23.txt  maze_24.txt  maze_25.txt  maze_26.txt  maze_27.txt  maze_28.txt  maze_29.txt  maze_3.txt  maze_30.txt  maze_31.txt  maze_32.txt  maze_33.txt  maze_34.txt  maze_35.txt  maze_36.txt  maze_37.txt  maze_38.txt  maze_39.txt  maze_4.txt  maze_40.txt  maze_41.txt  maze_42.txt  maze_43.txt  maze_44.txt  maze_45.txt  (+10 more)
mazes_new/: maze_1.txt  maze_10.txt  maze_11.txt  maze_12.txt  maze_13.txt  maze_14.txt  maze_15.txt  maze_16.txt  maze_17.txt  maze_18.txt  maze_19.txt  maze_2.txt  maze_20.txt  maze_21.txt  maze_22.txt  maze_23.txt  maze_24.txt  maze_25.txt  maze_26.txt  maze_27.txt  maze_28.txt  maze_29.txt  (+28 more)
(+128 files in other folders)
